# Good_Habits

./: .gitignore  CLAUDE.md  PRD.md  README.md
.claude/: settings.local.json
.claude/commands/: commit.md  create-prd.md  init-project.md
.claude/commands/core_piv_loop/: plan-feature.md
.claude/commands/github_bug_fix/: implement-fix.md
.claude/commands/validation/: system-review.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  absences.py  completions.py  habits.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  absence.py  base.py  completion.py  habit.py
backend/app/schemas/: __init__.py  absence.py  completion.py  habit.py  stats.py
backend/app/services/: __init__.py  habit_service.py  stats_service.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_absences_api.py  test_completions_api.py  test_habits_api.py  test_habits_with_stats.py
backend/tests/unit/: test_stats_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AbsenceForm.tsx  Button.tsx  Calendar.tsx  CalendarDay.tsx  CompletionCheckbox.tsx  EmptyState.tsx  HabitCard.tsx  HabitForm.tsx  Modal.tsx  StatsDisplay.tsx  StreakBadge.tsx  Toast.tsx
frontend/src/context/: ToastContext.tsx  toastTypes.ts
frontend/src/hooks/: useCalendarData.ts  useHabits.ts  useToast.ts
frontend/src/pages/: CalendarPage.tsx  TodayPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: habit.ts
